корректировка обхода sudo с помощью polkit